# OSDungeon

./: .gitignore  CMakeLists.txt  OSDungeon.sln  OSDungeon.vcxproj.filters
OSDungeon/: CMakeLists.txt  OSDungeon.vcxproj  OSDungeon.vcxproj.filters  background_view.cpp  background_view.h  brush.cpp  brush.h  brush_editor.cpp  brush_editor.h  common.h  databases.cpp  databases.h  db_editor.cpp  db_editor.h  entity.cpp  entity.h  entity_editor.cpp  entity_editor.h  entity_template.h  game_state.h  ground.h  imgui_utils.cpp  imgui_utils.h  labyrinth.cpp  labyrinth.h  labyrinth_background.cpp  labyrinth_background.h  labyrinth_edit_view.cpp  labyrinth_edit_view.h  labyrinth_editor.h  labyrinth_pov.cpp  labyrinth_pov.h  labyrinth_print.cpp  labyrinth_print.h  labyrinth_test.cpp  labyrinth_top_view.cpp  labyrinth_top_view.h  labyrinth_view.cpp  labyrinth_view.h  main.cpp  (+15 more)
OSDungeon/assets/saves/: current.labyrinth  entities.db  ground.db  texture.db  wall.db
OSDungeon/editor/: CMakeLists.txt  brush_editor.cpp  imgui_utils.cpp  labyrinth_editor.cpp  labyrinth_test.cpp  labyrinth_top_view.cpp  main.cpp  one_point_perspective.h  static_view.cpp  view_utils.h
OSDungeon/imgui/: imgui-SFML.cpp  imgui_stdlib.h
OSDungeon/logic/: CMakeLists.txt  brush.h  databases.cpp  databases.h  entity.cpp  entity.h  entity_state.cpp  entity_template.cpp  entity_template.h  ground.cpp  ground.h  labyrinth.h  labyrinth_background.cpp  labyrinth_print.cpp  sprite.cpp  sprite.h  texture.cpp  texture.h  wall.h
OSDungeon/logic/tests/: labyrinth_test.cpp
assets/saves/: current.labyrinth  wall.db
assets/textures/: Bunny chest.pdn
editor/: CMakeLists.txt  entity_editor.h  imgui_utils.h  labyrinth_editor.cpp  labyrinth_editor.h  labyrinth_properties_editor.cpp  labyrinth_properties_editor.h  labyrinth_view.cpp  one_point_perspective.cpp  runner.cpp  runner.h  static_view.h
editor/imgui/: imconfig.h  imgui_stdlib.cpp
logic/: CMakeLists.txt  entity_template.h  labyrinth.cpp  labyrinth.h  sprite.h  texture.h  wall.cpp  wall.h
logic/tests/: labyrinth_test.cpp  main.cpp
